# rag_powered_webapp

./: .dockerignore  .gitignore  Architecture.md  Dockerfile.streamlit  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yaml
.github/workflows/: dependabot.yaml  deploy.yaml
backend/: Dockerfile  api_client.py  main.py
backend/legacy/: conversation_history.py  interview_state.py  rag_query_sparkless.py
backend/models/: requests.py  responses.py
backend/routers/: interview.py  query.py
backend/services/: experiment_design_service.py  interview_service.py  rag_service.py
backend/tests/api/: interview_router.py  test_interview_router.py
backend/tests/integration/: test_main.py
backend/tests/unit/: test_interview_state.py
backend/tools/: gemini_call.py  iterative_retrieval.py
frontend/: streamlit_app.py
