[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.114.0",
    "databricks-sql-connector>=4.2.6",
    "dotenv>=0.9.9",
    "mysql-connector>=2.2.9",
    "mysql-connector-python>=9.7.0",
]
