[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "databricks-cli>=0.18.0",
    "databricks-sdk>=0.114.0",
    "databricks-sql-connector>=4.2.6",
    "delta-spark>=4.1.0",
    "dotenv>=0.9.9",
    "langchain>=1.3.7",
    "langchain-text-splitters>=1.1.2",
    "mysql-connector>=2.2.9",
    "mysql-connector-python>=9.7.0",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.2",
    "requests>=2.34.2",
]
